--- a/Project.toml
+++ b/Project.toml
@@ -6,5 +6,11 @@ version = "0.1.0"
 [deps]
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 
+[weakdeps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+
+[extensions]
+PlotsExt = "Plots"
+
 [compat]
 julia = "1.10"
