--- a/Project.toml
+++ b/Project.toml
@@ -7,10 +7,11 @@ version = "0.1.0"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
 
 [weakdeps]
+Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [extensions]
-PlotsExt = "Plots"
+PlotsExt = ["Plots","Base64"]
 
 [compat]
 julia = "1.10"
