--- a/Project.toml
+++ b/Project.toml
@@ -4,14 +4,17 @@ authors = ["Nikolas Siccha <nikolassiccha@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
+SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 
 [weakdeps]
-Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 
 [extensions]
-PlotsExt = ["Plots","Base64"]
+PlotsExt = "Plots"
+DataFramesExt = "DataFrames"
 
 [compat]
 julia = "1.10"
