--- a/Project.toml
+++ b/Project.toml
@@ -5,16 +5,16 @@ version = "0.1.0"
 
 [deps]
 Base64 = "2a0f44e3-6c83-55bd-87e4-b1978d98bd5f"
+CRC32c = "8bf52ea8-c179-5cab-976a-9e18b702a9bc"
 Markdown = "d6f4376e-aef5-505a-96c1-9c027394607a"
-SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 
 [weakdeps]
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [extensions]
-PlotsExt = "Plots"
 DataFramesExt = "DataFrames"
+PlotsExt = "Plots"
 
 [compat]
 julia = "1.10"
